src/main/java/com/example/fas/exceptions/user/invalid/EmailInvalidException.java
package com.example.fas.exceptions.user.invalid;

public class EmailInvalidException extends RuntimeException {
    public EmailInvalidException(String message) {
        super(message);
    }
}
